#103 - more spacing fixes

--- a/assets/styles/scss/components/task/_TaskListItem.scss
+++ b/assets/styles/scss/components/task/_TaskListItem.scss
@@ -33,13 +33,20 @@
 		flex-wrap: nowrap;
 		align-items: flex-start;
 
+		> * {
+			margin-right: 0.5em;
+
+			&:last-child {
+				margin-right: 0;
+			}
+		}
+
 		.completed {
 			display: flex;
 			align-items: center;
 			justify-content: center;
 			width: 1.15em;
 			height: 1.15em;
-			margin-right: 1rem;
 			border-radius: 999px;
 			border: 1px solid color(grey);
 			background: color(grey-lightest);
@@ -61,7 +68,6 @@
 			flex: 1;
 			display: flex;
 			align-items: flex-start;
-			margin-right: 1rem;
 			line-height: 1.3;
 		}
 
@@ -69,7 +75,8 @@
 			display: flex;
 			flex-wrap: nowrap;
 			align-items: center;
-			margin: 0 1rem;
+			min-width: 2em;
+			margin: 0;
 			font-size: 1em;
 			opacity: 0.5;
 
